[package]
name = "botler"
version = "0.1.0"
description = "Custom Logic Trigger in Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "botler"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
